--- a/Mafia-the-Game.tex
+++ b/Mafia-the-Game.tex
@@ -1,6 +1,7 @@
-\documentclass[12pt]{article}
-\usepackage[bf,center]{titlesec}
+\documentclass[12pt]{report}
+\usepackage{titlesec}
 \usepackage[utf8]{inputenc}
+\usepackage[latvian]{babel}
 \usepackage{enumitem}
 \usepackage{fancyhdr}
 \usepackage{gensymb} % grādu simbols
@@ -13,9 +14,11 @@
 \usepackage{secdot}
 \usepackage{tabularx}
 \usepackage{tcolorbox}
-\usepackage{tocloft}
 \usepackage{tikz}
 \usepackage{listings}
+\usepackage{tocloft}
+\usepackage{caption}
+\usepackage{lipsum} % TODO: Remove
 \usetikzlibrary{positioning}
 
 \hypersetup{
@@ -26,36 +29,50 @@
 
 \urlstyle{rm}
 
-\titlespacing*{\section}{0pt}{0pt}{1.5pt}
-\titlespacing*{\subsection}{0pt}{0.5\baselineskip}{1.5pt}
-\titlespacing*{\subsubsection}{0pt}{0.5\baselineskip}{1.5pt}
-\titleformat{\section}{\large \bfseries \centering \vfill\eject}{\thesection.}{1em}{} % section formatting
-\titleformat{\subsection}{\normalsize \bfseries \centering}{\thesubsection.}{1em}{} % subsection formatting
-\titleformat{\subsubsection}{\normalsize \bfseries \centering}{\thesubsubsection.}{1em}{} % subsubsection formatting
-\geometry{a4paper, left=3cm, right=2cm, top=2cm, bottom=2cm}
+\titlespacing*{\section}{0pt}{2em}{2em}
+\titlespacing*{\subsection}{0pt}{2em}{2em}
+\titlespacing*{\subsubsection}{0pt}{2em}{2em}
+\titleformat{\section}{\large\bfseries\centering\vfill\eject\MakeUppercase}{\thesection}{1em}{} % section formatting
+\titleformat{\subsection}{\large\bfseries\centering}{\thesubsection}{1em}{} % subsection formatting
+\titleformat{\subsubsection}{\large\bfseries\centering}{\thesubsubsection}{1em}{} % subsubsection formatting
+
+\geometry{a4paper, left=30mm, right=20mm, top=20mm, bottom=20mm}
+
 \pagestyle{fancy}
 \fancyhead{}
 \fancyfoot{}
 \fancyfoot[C]{\thepage}
 \renewcommand{\headrulewidth}{0pt}
-\linespread{1.3}
+\linespread{1.5}
 \setlength{\parindent}{1cm}
 \setlength{\parskip}{0pt}
-\renewcommand{\contentsname}{\hspace*{\fill}\bfseries\large Saturs\hspace*{\fill}}
-\renewcommand{\cfttoctitlefont}{\centering\bfseries\large} % Remove \bfseries from ToC title
-\renewcommand{\cftsecfont}{} % Remove \bfseries from section titles in ToC
-\renewcommand{\cftsecpagefont}{} % Remove \bfseries from section titles' page in ToC
-\renewcommand{\cftsecleader}{\cftdotfill{\cftsecdotsep}}
-\renewcommand\cftsecdotsep{\cftdot}
-\renewcommand\cftsubsecdotsep{\cftdot}
-\renewcommand{\cftsecaftersnum}{.} % dot after section number
-\renewcommand{\cftsubsecaftersnum}{.}
+
+\setcounter{secnumdepth}{3} % Numering for subsubsections
+\setcounter{tocdepth}{3} % Add subsubsections in ToC
+
+
+% ToC config
+\renewcommand{\cftsecfont}{\MakeUppercase}
+\renewcommand{\cfttoctitlefont}{\hfill\large\bfseries\MakeUppercase}
+\renewcommand{\cftaftertoctitle}{\hfill}
+\cftsetindents{section}{0.5cm}{0.5cm}
+\cftsetindents{subsection}{1cm}{1cm}
+\cftsetindents{subsubsection}{1.5cm}{1.5cm}
+% \addto\captionslatvian{
+% 	\renewcommand{\contentsname}{Satura rādītājs}
+% }
+
+% TODO: configure table 
+% TODO: configure image
+
+% Table config
+
 
 \begin{document}
 \input{./src/title-page.tex}
-
-\tableofcontents
-\thispagestyle{empty}
-\setcounter{page}{2}
 \input{./src/abstract.tex}
+\tableofcontents
+\input{./src/introduction.tex}
+\input{./src/example.tex}
+
 \end{document}
