--- a/src/title-page.tex
+++ b/src/title-page.tex
@@ -1,32 +1,39 @@
 \begin{titlepage}
-    \thispagestyle{empty}
-    \begin{center}
-        \vspace*{2cm}
-        \begin{large}\textbf{LATVIJAS UNIVERSITĀTE}
+	\thispagestyle{empty}
+	\begin{center}
+		\MakeUppercase{\large Latvijas Universitāte}
 
-            \textbf{DATORIKAS FAKULTĀTE}
+		\MakeUppercase{\large Datorikas Fakultāte}
 
-            \vfill
-            \textbf{Mafia}
-        \end{large}
+		\vfill
+		\textbf{\Large Galda spēle}
 
-        \vfill
-        \textbf{Programminženierija}
-    \end{center}
-    \vspace{4cm}
-    \begin{flushleft}
-        \textbf{Alens Aleksandrs Čerņa}, ac22065
+		\textbf{\MakeUppercase{\Large Mafija}}
 
-        \textbf{Ernests Gustavs Dane}, eg22086
+		\vspace{1cm}
+		\MakeUppercase{Praktiskais darbs programminženierijā}
+		\vfill
+	\end{center}
+	\begin{flushright}
+		\textbf{Darba autori:}
 
-        \textbf{Jorens Štekeļs} js21283
+		Alens Aleksandrs Čerņa, ac22065
 
-        \textbf{Kristiāns Francis Cagulis}, kc22015
+		Ernests Gustavs Dane, eg22086
 
-        \textbf{Miķelis Kukainis}, mk22092
-    \end{flushleft}
-    \vspace{1cm}
-    \begin{center}
-        RĪGA 2023
-    \end{center}
+		Jorens Štekeļs, js21283
+
+		Kristiāns Francis Cagulis, kc22015
+
+		Miķelis Kukainis, mk22092
+
+		\vspace{1cm}
+		\textbf{Darba vadītājs:}
+
+		prof. Dr. sc. comp. Laila Niedrīte
+	\end{flushright}
+	\vspace{1cm}
+	\begin{center}
+		RĪGA 2023
+	\end{center}
 \end{titlepage}
