--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -1,6 +1,6 @@
-\chapter*{Anotācija}
+\section*{Anotācija}
 \setcounter{page}{2}
 \lipsum[1-3]
 
-\chapter*{Abstract}
+\section*{Abstract}
 \lipsum[1-3]
