--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -1,6 +1,20 @@
 \section*{Anotācija}
 \setcounter{page}{2}
-\lipsum[1-3]
+Sociālā lomu spēle ``Mafija'' ir plaši pazīstama.
+Tā ir pieejama vairākos paveidos un formātos, kā arī piedāvā neierobežotu skaitu konfigurāciju un lomu.
+Spēlētāju ērtībai tiek piedāvāts lietotnes formāts, kas ietver norādījumus, informējot lietotāju par pieejamajām iespējām, un skaidrojumus, aprakstot spēles elementus un saskarni, ar mērķi vienkāršot tās spēlēšanu.
+Tirgus izpēte apliecina, ka ir pieejami vairāki, nepilnvērtīgi risinājumi.
+Programmatūras prasību specifikācija apraksta sistēmas pamatprasības ar papildus funkcionalitāti, tostarp lomu klāsta papildināšanu, spēles konfigurāciju izveidi, kā arī priviliģēta lietotāja stāvokli (maksas lietotāja), izmantojot abonamenta formāta maksājumu sistēmu.
+
+\textbf{Atslēgvārdi:}
+Mafijas spēle, sistēmas prasības, specifikācijas dokuments, programmatūras uzlabošana, lomu spēles mehānika, vienkāršota spēlēšana, organizatoriski risinājumi, programmatūras prasību specifikācija, lietotāju veidots saturs, abonamenta maksājumi, maksas lietotājs.
 
 \section*{Abstract}
-\lipsum[1-3]
+The social role-playing game ``Mafia'' is widely known.
+It is available in various versions and formats, offering an unlimited number of configurations and roles.
+For the convenience of players, there is an application format that includes instructions, informing the user about available options, and explanations describing the game's elements and interface, to simplify its play.
+Market research confirms that several incomplete solutions are available.
+The software requirements specification describes the system's basic requirements with additional functionality, including expanding the range of roles, creating game configurations, and a privileged user status (premium user) using a subscription-based payment system.
+
+\textbf{Keywords:}
+Mafia game, system requirements, specification document, software improvement, role-playing mechanics, simplified gameplay, organizational solutions, software requirements specification, user-generated content, subscription payments, premium user.
