--- a/src/title-page.tex
+++ b/src/title-page.tex
@@ -6,9 +6,9 @@
 		\MakeUppercase{\large Datorikas Fakultāte}
 
 		\vfill
-		\textbf{\Large Galda spēle}
+		\textbf{\Large Tiešsaistes spēles sistēmas ``MAFIJA''}
+		\textbf{\Large programmatūras prasību specifikācija}
 
-		\textbf{\MakeUppercase{\Large Mafija}}
 
 		\vspace{1cm}
 		\MakeUppercase{Praktiskais darbs programminženierijā}
